[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-audit"
version = "0.1.0"
description = "FlowOpt: Audit a website's automation potential"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "tldextract>=5.1.2",
  "rich>=13.7.0",
]

[project.scripts]
site-audit = "site_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["site_audit*"]
